# ChangeLog for x11-themes/jimmac-xcursors
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Aug 2012; Justin Lecher <jlec@gentoo.org> ChangeLog, Manifest:
  Cleaned ChangeLog

  12 Aug 2012; Justin Lecher <jlec@gentoo.org> jimmac-xcursors-0.1.ebuild,
  metadata.xml:
  Correct ewarn to einfo and blank einfo to echo; remove unneeded specification
  of *DEPEND; remove no-herd from metadata.xml