@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/jimmac-xcursors
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> jimmac-xcursors-0.1.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   12 Aug 2012; Justin Lecher <jlec@gentoo.org> ChangeLog, Manifest:
   Cleaned ChangeLog
